Update to 1.18  - Removed Access Widener as it is no longer needed